# offleash

./: .dockerignore  .env.example  .env.production  .env.test  .env.test.local.example  .envrc  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Tiltfile  compose.yaml  devbox.json  devenv.nix  devenv.yaml  flake.nix  fly.toml  justfile  package-lock.json  package.json  playwright.config.ts  progress.txt  render.yaml
.github/workflows/: build-api.yml  build-ios.yml  build-web-apps.yml  ci.yml  e2e-tests.yml
.husky/: pre-commit
.ralph/runs/: run-1768971639672-26213.json  run-1768973382875-85737.json  run-1768973620277-2028.json  run-1768973845883-22141.json  run-1768974585105-39233.json  run-1768975022634-55119.json  run-1768980789624-89781.json  run-1769010112548-37213.json
apps/admin-dashboard/: .env.example  package-lock.json  package.json  svelte.config.js
apps/customer-web/: .env.example  package-lock.json  package.json  svelte.config.js
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs  supabase_auth.rs  tenant.rs
crates/api/src/routes/: admin_branding.rs  admin_tenants.rs  admin_users.rs  auth.rs  availability.rs  blocks.rs  bookings.rs  branding.rs  calendar.rs  checkout.rs  contexts.rs  dashboard.rs  feedback.rs  invitations.rs  locations.rs  mod.rs  oauth.rs  payment_methods.rs  payment_providers.rs  payouts.rs  pets.rs  phone_auth.rs  platform_auth.rs  prometheus.rs  recurring_bookings.rs  route_optimization.rs  service_areas.rs  services.rs  subscriptions.rs  travel_time.rs  user_identities.rs  users.rs  walker_profiles.rs  wallet_auth.rs  webhooks.rs  working_hours.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  tenant_pool.rs
crates/db/src/models/: block.rs  booking.rs  calendar.rs  customer_payment_method.rs  dispute.rs  invitation.rs  location.rs  membership.rs  mod.rs  organization.rs  payment.rs  payment_provider.rs  payout.rs  pet.rs  platform_admin.rs  recurring_booking.rs  service.rs  service_area.rs  subscription.rs  tenant_database.rs  transaction.rs  travel_time.rs  user.rs  user_identity.rs  walker_profile.rs  working_hours.rs
crates/db/src/repositories/: block_repo.rs  booking_repo.rs  calendar_repo.rs  customer_payment_method_repo.rs  dispute_repo.rs  invitation_repo.rs  location_repo.rs  membership_repo.rs  mod.rs  organization_repo.rs  payment_provider_repo.rs  payment_repo.rs  payout_repo.rs  pet.rs  platform_admin_repo.rs  recurring_booking_repo.rs  service_area_repo.rs  service_repo.rs  subscription_repo.rs  tenant_database_repo.rs  transaction_repo.rs  travel_time_repo.rs  user_identity_repo.rs  user_repo.rs  walker_profile_repo.rs  working_hours_repo.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: lib.rs
crates/integrations/src/google_maps/: client.rs  mod.rs
crates/integrations/src/square/: client.rs  error.rs  mod.rs  oauth.rs  payments.rs
crates/integrations/src/stripe/: client.rs  connect.rs  customers.rs  error.rs  mod.rs  payments.rs  webhooks.rs
crates/integrations/src/tax/: error.rs  mod.rs  taxjar.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/errors/: app_error.rs  domain_error.rs  mod.rs
crates/shared/src/types/: coordinates.rs  ids.rs  mod.rs  money.rs  time.rs
demos/: colorado-seed-data.sql  ios-demo-automated.sh  ios-demo-record.sh  run-e2e-tests.sh  seed-test-data.sql  setup-travel-time-demo.sql  travel-time-demo.ts
docs/: DEPLOYMENT.md  SUPABASE_AUTH_SETUP.md  prd-appium-ios-ci-testing.md
migrations/: 20240101000001_create_users.sql  20240101000002_create_services.sql  20240101000003_create_locations.sql  20240101000004_create_working_hours.sql  20240101000005_create_blocks.sql  20240101000006_create_bookings.sql  20240101000007_create_payments.sql  20240101000008_create_travel_cache.sql  20240101000009_create_organizations.sql  20240101000010_create_organization_settings.sql  20240101000011_create_tenant_databases.sql  20240101000012_create_platform_admins.sql  20240101000013_add_organization_id_to_users.sql  20240101000014_add_organization_id_to_services.sql  20240101000015_add_organization_id_to_remaining_tables.sql  20240101000016_add_recurring_bookings.sql  20240101000017_add_reliability_features.sql  20240101000018_add_calendar_schema.sql  20240101000019_add_travel_time_features.sql  20240101000020_add_customer_payment_methods.sql  20240101000021_add_walker_profiles.sql  20240101000022_add_service_areas.sql  20240101000023_add_settings_to_organizations.sql  20240101000024_add_multi_provider_auth.sql  20240101000025_add_invitations.sql  20240101000026_add_memberships.sql  20240101000027_add_pets.sql  20240101000028_add_payment_system.sql  20240101000029_update_payment_system_fields.sql  20240101000030_add_platform_admin_names.sql  20240101000031_fix_demo_tenant_structure.sql
nixos-vm/: README.md  configuration.nix
ralph/: prd.json  progress.txt
scripts/: fix-demo-tenant.sql  reset-test-db.sh  run-dev.sh  setup-dev.sh
tasks/: prd-comprehensive-test-suite.md  prd-dynamic-timeslots.md  prd-external-calendar-sync.md  prd-group-walks.md  prd-handrolled-auth-providers.md  prd-ios-auth-reliability-observability.md  prd-multi-tenant-payment-system.md  prd-mvp-completion.md  prd-oauth-passkey-auth.md  prd-offleash.md  prd-persona-management.md  prd-recurring-bookings-reliability.md  prd-walker-calendar-scheduling.md  prd-white-label-platform.md  refactor-to-monorepo.md
tests/: global.setup.ts
(+409 files in other folders)
