[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/shared",
    "crates/db",
    "crates/integrations",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Testing
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
