[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
argon2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
