[package]
name = "integrations"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
